[project]
name = "wtf_plus"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "thephunkmonk", email = "andrewchoi1218@gmail.com"},
]
dependencies = []
requires-python = ">=3.9.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true 
