[project]
name = "wtf_plus"
version = "0.2.2"
description = "Default template for PDM package"
authors = [
    {name = "thephunkmonk", email = "andrewchoi1218@gmail.com"},
]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true

[project.scripts]
wtf-plus = "wtf_plus.plus:plus_f" 
